deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-login
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
       app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: 548021806095.dkr.ecr.ap-northeast-2.amazonaws.com/test-ecr:login7
        name: web-login
