test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
       app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: 871459716950.dkr.ecr.ap-northeast-2.amazonaws.com/test-ecr:later
        name: web-nginx
