board.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-nodeport
spec:
  selector:
    app: board
  type: NodePort
  ports:
    - port: 80
      targetPort: 3002
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board
  labels:
    app: board
spec:
  replicas: 1
  selector:
    matchLabels:
       app: board
  template:
    metadata:
      labels:
        app: board
    spec:
      containers:
      - image: 548021806095.dkr.ecr.ap-northeast-2.amazonaws.com/test-ecr:board4
        name: board
