nonstop.yaml
apiVersion: v1
kind: Service
metadata:
  name: nonstop-nodeport
spec:
  selector:
    app: nonstop
  type: NodePort
  ports:
    - port: 80
      targetPort: 3003
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nonstop
  labels:
    app: nonstop
spec:
  replicas: 1
  selector:
    matchLabels:
       app: nonstop
  template:
    metadata:
      labels:
        app: nonstop
    spec:
      containers:
      - image: 548021806095.dkr.ecr.ap-northeast-2.amazonaws.com/test-ecr:nonstop21
        name: nonstop
